--- a/frontend/src/styles/index.scss
+++ b/frontend/src/styles/index.scss
@@ -1,2 +1,2 @@
-@import '~bootstrap/scss/bootstrap';
+@import "bootstrap/dist/css/bootstrap.min.css";
 @import '~react-toastify/dist/ReactToastify.css';
